# acmt001-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
acmt001_mcp/: __init__.py  server.py
examples/: README.md  mcp_tools.py
tests/: conftest.py  test_mcp_server.py
